[gd_scene load_steps=6 format=3 uid="uid://boksdppb6p870"]

[ext_resource type="Script" uid="uid://cipxhn0ck2ev2" path="res://strato_defense/explosion/explosion.gd" id="1_g87wm"]
[ext_resource type="AudioStream" uid="uid://c2tabf360fpkf" path="res://assets/explosion2.wav" id="2_1517y"]
[ext_resource type="AudioStream" uid="uid://dcbnjlvf7dme5" path="res://assets/explosion1.wav" id="3_075q2"]
[ext_resource type="AudioStream" uid="uid://ckyc7blxpn4nl" path="res://assets/explosion3.wav" id="4_075q2"]

[sub_resource type="Gradient" id="Gradient_lj11g"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Explosion" type="CPUParticles2D"]
amount = 25
lifetime = 0.5
preprocess = 25.0
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2(0, 25)
initial_velocity_min = 80.0
initial_velocity_max = 120.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_lj11g")
script = ExtResource("1_g87wm")

[node name="Sound1" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_1517y")

[node name="Sound2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_075q2")

[node name="Sound3" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_075q2")

[connection signal="finished" from="." to="." method="_on_finished"]
